@@ -485,10 +485,20 @@ dbiIndex db3New(rpmdb rpmdb, int rpmtag)
 	break;
     }
 
-    dbi->dbi_use_cursors = 1;		/* Cursors are always used now. */
+    dbi->dbi_use_cursors = 1;		/* db3 cursors are always used now. */
 
+    if (!dbi->dbi_use_dbenv) {		/* db3 dbenv is always used now. */
+	dbi->dbi_use_dbenv = 1;
+	dbi->dbi_eflags |= (DB_INIT_MPOOL|DB_JOINENV);
+	dbi->dbi_mp_mmapsize = 8 * 1024 * 1024;
+	dbi->dbi_mp_size = 512 * 1024;
+	dbi->dbi_tear_down = 1;
+    }
+
+#ifdef	NOTYET
     if ((dbi->dbi_bt_flags | dbi->dbi_h_flags) & DB_DUP)
 	dbi->dbi_permit_dups = 1;
+#endif
 
     return dbi;
 }
